5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1594_1801.log
== TEST (2019-03-26 16:23:42) 
-- CODE:
a = input("nome do objeto: ")

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:08:51) 
-- CODE:
a = input("nome do objeto: ")
d = "abra"," ",a
print(a)

-- OUTPUT:
livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:09:10) 
-- CODE:
a = input("nome do objeto: ")
d = "abra"+" "+a
print(a)

-- OUTPUT:
livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:09:35) 
-- CODE:
a = input("nome do objeto: ")
d = "abra",+," ",+,a
print(a)

-- ERROR:
File "XXXX", line 2
    d = "abra",+," ",+,a
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:15) 
-- CODE:
a = input("nome do objeto: ")
d = "abra"+" "+ a
print(d)

-- OUTPUT:
abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:34) 
-- CODE:
a = input("nome do objeto: ")
d = ("abra"+" "+ a)*4
print(d)
-- OUTPUT:
abra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:14:20) 
-- CODE:
a = input("nome do objeto: ")
d = ("abra"+" "+ a)+(" "+"abra"+" "+ a)
print(d)
-- OUTPUT:
abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:14:36) 
-- CODE:
a = input("nome do objeto: ")
d = ("abra"+" "+ a)+(" "+"abra"+" "+ a)+(" "+"abra"+" "+ a)+(" "+"abra"+" "+ a)
print(d)
-- OUTPUT:
abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:14:43) 
-- CODE:
a = input("nome do objeto: ")
d = ("abra"+" "+ a)+(" "+"abra"+" "+ a)+(" "+"abra"+" "+ a)+(" "+"abra"+" "+ a)
print(d)
-- EXECUTION TIME:
0.201686
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa abra caixa abra caixa abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:15:21) 
-- CODE:
a = input("nome do objeto: ")
d = ("Abra"+" "+ a)+(" "+"Abra"+" "+ a)+(" "+"Abra"+" "+ a)+(" "+"Abra"+" "+ a)
print(d)
-- EXECUTION TIME:
0.154873
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:15:25) 
-- CODE:
a = input("nome do objeto: ")
d = ("Abra"+" "+ a)+(" "+"Abra"+" "+ a)+(" "+"Abra"+" "+ a)+(" "+"Abra"+" "+ a)
print(d)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:15:36) 
-- CODE:
a = input("nome do objeto: ")
d = ("Abra"+" "+ a)+(" "+"Abra"+" "+ a)+(" "+"Abra"+" "+ a)+(" "+"Abra"+" "+ a)
print(d)
-- EXECUTION TIME:
0.143654
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:16:02) 
-- CODE:
a = input("nome do objeto: ")
d = ("Abra"+" "+ a)*4
print(d)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:16:30) 
-- CODE:
a = input("nome do objeto: ")
d = ("Abra"+" "+ a)+" "*4
print(d)
-- OUTPUT:
Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:09) 
-- CODE:
a = input("nome do objeto: ")
rep = int(input("numero de repeticao: "))
d = ("Abra"+" "+ a+" ")*rep
print(d)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:18:16) 
-- CODE:
a = input("nome do objeto: ")
rep = int(input("numero de repeticao: "))
d = ("Abra"+" "+ a+" ")*rep
print(d)
-- EXECUTION TIME:
0.204656
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
